2011-08-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: non-directive comments in TAP results are preserved
	* tests/tap-result-comment.test: New test.
	* tests/Makefile.am (tap_with_common_setup_tests): Update.

2011-08-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: TAP result number followed by non-whitespace word boundary
	* tests/tap-number-wordboundary.test: New test.
	* tests/Makefile.am (tap_with_common_setup_tests): Update.

2011-08-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: a TAP result numbered "0" is always out-of-order
	* tests/tap-test-number-0.test: New, checks that a test result
	numbered as 0 is to be considered out-of-order; this is
	consistent with the behaviour of the `prove' utility.
	* tests/Makefile.am (tap_with_common_setup_tests): Update.

2011-08-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	cosmetics: fix botched indentation in perl TAP driver
	* lib/tap-driver.pl (main, Getopt::Long::GetOptions): Fix
	improper or botched indentation.

2011-08-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: some more tests on corner cases of TAP support
	* tests/tap-no-spurious.test: Extend checks verifying that a line
	matching, say, the regex "^ok[a-zA-Z0-9_]" is *not* considered a
	TAP result.
	* tests/tap-no-spurious-numbers.test: New test, checking that our
	TAP driver doesn't spuriously recognize as TAP result numbers what
	is not (even if it seems pretty close).
	* tests/tap-negative-numbers.test: New test, checking that our
	TAP driver doesn't spuriously recognize negative TAP result
	numbers, but correctly interprets them as test descriptions
	instead.
	* tests/tap-plan-leading-zero.test, tap-numbers-leading-zero.test:
	New tests, checking how our driver fares in recognizing numbers
	with leading zeroes in TAP results or TAP plans.
	* tests/tap-planskip-malformed.test: New test, checking that a
	malformed TAP plan is not recognized as a valid plan.