@@ -1,5 +1,13 @@
 2011-08-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	coverage: ambiguous use of TAP "TODO"/"SKIP" directives
+	* tests/tap-ambiguous-directive.test: New test.
+	* tests/tap-todo-skip-together.test: Reference it in heading
+	comments.
+	* tests/Makefile.am (tap_with_common_setup_tests): Update.
+
+2011-08-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	coverage: non-directive comments in TAP results are preserved
 	* tests/tap-result-comment.test: New test.
 	* tests/Makefile.am (tap_with_common_setup_tests): Update.
